Ripped out all the Log4J calls.